assets/k8s/00_py_phone_caller_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: py-phone-caller
  labels:
    app: py-phone-caller
