assets/k8s/06_asterisk_recall.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: asterisk-recall-deployment
  labels:
    app: asterisk-recall
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: asterisk-recall
  template:
    metadata:
      labels:
        app: asterisk-recall
    spec:
      securityContext:
        runAsUser: 2
      containers:
      - name: asterisk-recall
        image: quay.io/py-phone-caller/asterisk_recall:0.0.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: caller-config
            mountPath: /opt/py-phone-caller/config/caller_config.toml
            subPath: caller_config.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
