assets/k8s/06_asterisk_recaller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: asterisk-recaller-deployment
  labels:
    app: asterisk-recaller
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: asterisk-recaller
  template:
    metadata:
      labels:
        app: asterisk-recaller
    spec:
      containers:
        - name: asterisk-recaller
          image: quay.io/py-phone-caller/asterisk_recaller:1.0.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: caller-config
              mountPath: /app/src/config/settings.toml
              subPath: settings.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
