assets/k8s/03_postgresql.yml
apiVersion: v1
kind: Service
metadata:
  namespace: py-phone-caller
  name: postgresql-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      name: tcp-5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: postgresql-deployment
  labels:
    app: postgresql
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: docker.io/library/postgres:17-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - py_phone_caller
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - py_phone_caller
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: postgresql-pvc
