assets/k8s/03_redis.yml
apiVersion: v1
kind: Service
metadata:
  namespace: py-phone-caller
  name: redis-service
spec:
  type: ClusterIP
  ports:
    - port: 6379
      name: tcp-6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: docker.io/library/redis:7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 3
