assets/k8s/07_call_register.yml
apiVersion: v1
kind: Service
metadata:
  namespace: py-phone-caller
  name: call-register-service
spec:
  type: NodePort
  ports:
  - port: 8083
    name: http-8083
    targetPort: 8083
    protocol: TCP
  selector:
    app: call-register
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: call-register-deployment
  labels:
    app: call-register
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: call-register
  template:
    metadata:
      labels:
        app: call-register
    spec:
      securityContext:
        runAsUser: 2
      containers:
      - name: call-register
        image: quay.io/py-phone-caller/call_register:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
        volumeMounts:
          - name: caller-config
            mountPath: /opt/py-phone-caller/config/caller_config.toml
            subPath: caller_config.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
