assets/k8s/07_caller_register.yml
apiVersion: v1
kind: Service
metadata:
  namespace: py-phone-caller
  name: caller-register-service
spec:
  type: ClusterIP
  ports:
    - port: 8083
      name: http-8083
      targetPort: 8083
      protocol: TCP
  selector:
    app: caller-register
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: caller-register-deployment
  labels:
    app: caller-register
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: caller-register
  template:
    metadata:
      labels:
        app: caller-register
    spec:
      containers:
        - name: caller-register
          image: quay.io/py-phone-caller/caller_register:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: caller-config
              mountPath: /app/src/config/settings.toml
              subPath: settings.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
