assets/k8s/08_asterisk_call.yml
apiVersion: v1
kind: Service
metadata:
  namespace: py-phone-caller
  name: asterisk-call-service
spec:
  type: NodePort
  ports:
  - port: 8081
    name: http-8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: asterisk-call
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: asterisk-call-deployment
  labels:
    app: asterisk-call
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: asterisk-call
  template:
    metadata:
      labels:
        app: asterisk-call
    spec:
      securityContext:
        runAsUser: 2
      containers:
      - name: asterisk-call
        image: quay.io/py-phone-caller/asterisk_call:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        volumeMounts:
          - name: caller-config
            mountPath: /opt/py-phone-caller/config/caller_config.toml
            subPath: caller_config.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
