assets/k8s/09_caller_prometheus_webhook.yml
apiVersion: v1
kind: Service
metadata:
  namespace: py-phone-caller
  name: caller-prometheus-webhook-service
spec:
  type: NodePort
  ports:
  - port: 8084
    name: http-8084
    targetPort: 8084
    protocol: TCP
  selector:
    app: caller-prometheus-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: caller-prometheus-webhook-deployment
  labels:
    app: caller-prometheus-webhook
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: caller-prometheus-webhook
  template:
    metadata:
      labels:
        app: caller-prometheus-webhook
    spec:
      securityContext:
        runAsUser: 2
      containers:
      - name: caller-prometheus-webhook
        image: quay.io/py-phone-caller/caller_prometheus_webhook:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8084
        volumeMounts:
          - name: caller-config
            mountPath: /opt/py-phone-caller/config/caller_config.toml
            subPath: caller_config.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
