assets/k8s/10_caller_sms.yml
apiVersion: v1
kind: Service
metadata:
  namespace: py-phone-caller
  name: caller-sms-service
spec:
  type: NodePort
  ports:
  - port: 8085
    name: http-8085
    targetPort: 8085
    protocol: TCP
  selector:
    app: caller-sms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: caller-sms-deployment
  labels:
    app: caller-sms
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: caller-sms
  template:
    metadata:
      labels:
        app: caller-sms
    spec:
      securityContext:
        runAsUser: 2
      containers:
      - name: caller-sms
        image: quay.io/py-phone-caller/caller_sms:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8085
        volumeMounts:
          - name: caller-config
            mountPath: /opt/py-phone-caller/config/caller_config.toml
            subPath: caller_config.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
