assets/k8s/11_generate_audio.yml
apiVersion: v1
kind: Service
metadata:
  namespace: py-phone-caller
  name: generate-audio-service
spec:
  type: NodePort
  ports:
  - port: 8082
    name: http-8082
    targetPort: 8082
    protocol: TCP
  selector:
    app: generate-audio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: generate-audio-deployment
  labels:
    app: generate-audio
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: generate-audio
  template:
    metadata:
      labels:
        app: generate-audio
    spec:
      securityContext:
        runAsUser: 2
      containers:
      - name: generate-audio
        image: quay.io/py-phone-caller/generate_audio:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
        volumeMounts:
          - name: caller-config
            mountPath: /opt/py-phone-caller/config/caller_config.toml
            subPath: caller_config.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
